# DominoGameCPP

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.h  button.cpp  button.h  colors.h  field.cpp  field.h  game.cpp  game.h  graphics.h  list.cpp  list.h  main.cpp  menu.cpp  menu.h  mouse.cpp  mouse.h  parameters.h  player.cpp  player.h  profile.cpp  profile.h  records.cpp  records.h  set.cpp  set.h  statistics.cpp  statistics.h  textures.cpp  textures.h  tile.cpp  tile.h
